[package]
name = "urlpattern"
description = "A urlpattern polyfill for deno and the web"
repository = "https://github.com/denosaurs/urlpattern"
license = "MIT"
version = "0.1.0"
authors = ["Elias Sjögreen"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]
path = "wasm/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
urlpattern = "0.1.2"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

